fix: ie11 vertical align

--- a/src/components/ProductList/style/mobile.scss
+++ b/src/components/ProductList/style/mobile.scss
@@ -5,7 +5,6 @@
     flex-wrap: wrap;
     justify-content: center;
     margin: 0px -20px;
-    width: 100%;
 
     &__item {
         flex-shrink: 0;
