--- a/src/style/b-main-page/mobile.scss
+++ b/src/style/b-main-page/mobile.scss
@@ -4,18 +4,9 @@
     &__content {
         min-height: 100vh;
         display: flex;
-        flex-wrap: wrap;
-        align-items: stretch;
+        flex-direction: column;
         justify-content: center;
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
-
-        & >:first-child {
-            margin-top: auto;
-        }
-
-        & >:last-child {
-            margin-bottom: auto;
-        }
     }
 }
